--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
     <head>
         <title>Personal profile</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../bootstrap-3.3.7-dist/css/bootstrap.css">
-        <link rel="stylesheet" href="../bootstrap-3.3.7-dist/css/style.css">
+        <!--<link rel="stylesheet" href="../bootstrap-3.3.7-dist/css/bootstrap.css">-->
+        <!--<link rel="stylesheet" href="../bootstrap-3.3.7-dist/css/style.css">-->
+        <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="js/bootstrap.min.js">
+        <link rel="stylesheet" href="css/style.css">
         
         <link rel="stylesheet" href="fonts/stylesheet.css">
         <link rel="stylesheet" href="../bootstrap-3.3.7-dist/css/fontawesome-all.css">
