delete the the section

--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
 <!-------end_Portfolio------>
 
 <!-------strat_Portfolio------>
-        <section class="">
-            
-        </section>
+        <!--<section class="">-->
+            <!---->
+        <!--</section>-->
     </body>
 </html>
